Grammar/.antlr/AangParser.java
// Generated from c:\Users\Jorge Andres Sabella\Aang\Grammar\Aang.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SUMA=1, RESTA=2, MULT=3, DIVISION=4, ASIGNAR=5, IGUAL=6, DIFERENTE=7, 
		MENOR=8, MAYOR=9, Y_SIMBOLO=10, O_SIMBOLO=11, INT=12, CHAR=13, IF=14, 
		ELSE=15, WHILE=16, PRINT=17, RETURN=18, PROGRAMA=19, EMPEZAR=20, FIN=21, 
		I_PARENTESIS=22, D_PARENTESIS=23, I_CORCHETE=24, D_CORCHETE=25, PYCOMA=26, 
		COMA=27, VOID=28, ID=29, CTE_INT=30, CTE_CHAR=31, COMENT=32, WHITESPACE=33;
	public static final int
		RULE_programa = 0, RULE_p1 = 1, RULE_p2 = 2, RULE_variable = 3, RULE_principal = 4, 
		RULE_v = 5, RULE_v1 = 6, RULE_v2 = 7, RULE_tipo_id = 8, RULE_funcion = 9, 
		RULE_f = 10, RULE_f1 = 11, RULE_f2 = 12, RULE_bloque = 13, RULE_acciones = 14, 
		RULE_fun_regresar = 15, RULE_asignacion = 16, RULE_a = 17, RULE_expresion = 18, 
		RULE_e = 19, RULE_exp = 20, RULE_e1 = 21, RULE_factor = 22, RULE_termino = 23, 
		RULE_t = 24, RULE_condicion = 25, RULE_c = 26, RULE_ciclo = 27, RULE_escribir = 28, 
		RULE_es = 29, RULE_es2 = 30, RULE_cte_var = 31, RULE_llamar_fun = 32, 
		RULE_argumentos = 33, RULE_agregar_args = 34, RULE_fc = 35;
	public static final String[] ruleNames = {
		"programa", "p1", "p2", "variable", "principal", "v", "v1", "v2", "tipo_id", 
		"funcion", "f", "f1", "f2", "bloque", "acciones", "fun_regresar", "asignacion", 
		"a", "expresion", "e", "exp", "e1", "factor", "termino", "t", "condicion", 
		"c", "ciclo", "escribir", "es", "es2", "cte_var", "llamar_fun", "argumentos", 
		"agregar_args", "fc"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", "'<'", "'>'", 
		"'&&'", "'||'", "'int'", "'char'", "'if'", "'else'", "'while'", "'print'", 
		"'return'", "'programa'", "'empezar'", "'fin'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", "'void'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SUMA", "RESTA", "MULT", "DIVISION", "ASIGNAR", "IGUAL", "DIFERENTE", 
		"MENOR", "MAYOR", "Y_SIMBOLO", "O_SIMBOLO", "INT", "CHAR", "IF", "ELSE", 
		"WHILE", "PRINT", "RETURN", "PROGRAMA", "EMPEZAR", "FIN", "I_PARENTESIS", 
		"D_PARENTESIS", "I_CORCHETE", "D_CORCHETE", "PYCOMA", "COMA", "VOID", 
		"ID", "CTE_INT", "CTE_CHAR", "COMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(AangParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public TerminalNode PYCOMA() { return getToken(AangParser.PYCOMA, 0); }
		public P1Context p1() {
			return getRuleContext(P1Context.class,0);
		}
		public TerminalNode FIN() { return getToken(AangParser.FIN, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(PROGRAMA);
			setState(73);
			match(ID);
			setState(74);
			match(PYCOMA);
			setState(75);
			p1();
			setState(76);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P1Context extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public P2Context p2() {
			return getRuleContext(P2Context.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public P1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p1; }
	}

	public final P1Context p1() throws RecognitionException {
		P1Context _localctx = new P1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_p1);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				variable();
				setState(79);
				p2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				funcion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				principal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P2Context extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public P2Context p2() {
			return getRuleContext(P2Context.class,0);
		}
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public P2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p2; }
	}

	public final P2Context p2() throws RecognitionException {
		P2Context _localctx = new P2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_p2);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				funcion();
				setState(86);
				p2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				principal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			tipo_id();
			setState(92);
			v();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrincipalContext extends ParserRuleContext {
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public TerminalNode EMPEZAR() { return getToken(AangParser.EMPEZAR, 0); }
		public TerminalNode I_CORCHETE() { return getToken(AangParser.I_CORCHETE, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode D_CORCHETE() { return getToken(AangParser.D_CORCHETE, 0); }
		public PrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principal; }
	}

	public final PrincipalContext principal() throws RecognitionException {
		PrincipalContext _localctx = new PrincipalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_principal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			tipo_id();
			setState(95);
			match(EMPEZAR);
			setState(96);
			match(I_CORCHETE);
			setState(97);
			bloque();
			setState(98);
			match(D_CORCHETE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public V1Context v1() {
			return getRuleContext(V1Context.class,0);
		}
		public TerminalNode PYCOMA() { return getToken(AangParser.PYCOMA, 0); }
		public V2Context v2() {
			return getRuleContext(V2Context.class,0);
		}
		public VContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v; }
	}

	public final VContext v() throws RecognitionException {
		VContext _localctx = new VContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_v);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(ID);
			setState(101);
			v1();
			setState(102);
			match(PYCOMA);
			setState(103);
			v2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V1Context extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(AangParser.COMA, 0); }
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public V1Context v1() {
			return getRuleContext(V1Context.class,0);
		}
		public V1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v1; }
	}

	public final V1Context v1() throws RecognitionException {
		V1Context _localctx = new V1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_v1);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(COMA);
				setState(106);
				match(ID);
				setState(107);
				v1();
				}
				break;
			case PYCOMA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V2Context extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public V2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v2; }
	}

	public final V2Context v2() throws RecognitionException {
		V2Context _localctx = new V2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_v2);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_idContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(AangParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(AangParser.CHAR, 0); }
		public Tipo_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_id; }
	}

	public final Tipo_idContext tipo_id() throws RecognitionException {
		Tipo_idContext _localctx = new Tipo_idContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tipo_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==CHAR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public TerminalNode I_PARENTESIS() { return getToken(AangParser.I_PARENTESIS, 0); }
		public F1Context f1() {
			return getRuleContext(F1Context.class,0);
		}
		public TerminalNode D_PARENTESIS() { return getToken(AangParser.D_PARENTESIS, 0); }
		public TerminalNode I_CORCHETE() { return getToken(AangParser.I_CORCHETE, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode D_CORCHETE() { return getToken(AangParser.D_CORCHETE, 0); }
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			f();
			setState(118);
			match(ID);
			setState(119);
			match(I_PARENTESIS);
			setState(120);
			f1();
			setState(121);
			match(D_PARENTESIS);
			setState(122);
			match(I_CORCHETE);
			setState(123);
			bloque();
			setState(124);
			match(D_CORCHETE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(AangParser.VOID, 0); }
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_f);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(VOID);
				}
				break;
			case INT:
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				tipo_id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F1Context extends ParserRuleContext {
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public F2Context f2() {
			return getRuleContext(F2Context.class,0);
		}
		public F1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f1; }
	}

	public final F1Context f1() throws RecognitionException {
		F1Context _localctx = new F1Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_f1);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				tipo_id();
				setState(131);
				match(ID);
				setState(132);
				f2();
				}
				break;
			case D_PARENTESIS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F2Context extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(AangParser.COMA, 0); }
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public F2Context f2() {
			return getRuleContext(F2Context.class,0);
		}
		public F2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f2; }
	}

	public final F2Context f2() throws RecognitionException {
		F2Context _localctx = new F2Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_f2);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(COMA);
				setState(138);
				tipo_id();
				setState(139);
				match(ID);
				setState(140);
				f2();
				}
				break;
			case D_PARENTESIS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public AccionesContext acciones() {
			return getRuleContext(AccionesContext.class,0);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_bloque);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				variable();
				setState(146);
				bloque();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				acciones();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccionesContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AccionesContext acciones() {
			return getRuleContext(AccionesContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public EscribirContext escribir() {
			return getRuleContext(EscribirContext.class,0);
		}
		public Llamar_funContext llamar_fun() {
			return getRuleContext(Llamar_funContext.class,0);
		}
		public Fun_regresarContext fun_regresar() {
			return getRuleContext(Fun_regresarContext.class,0);
		}
		public AccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acciones; }
	}

	public final AccionesContext acciones() throws RecognitionException {
		AccionesContext _localctx = new AccionesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_acciones);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				asignacion();
				setState(153);
				acciones();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				condicion();
				setState(156);
				acciones();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				ciclo();
				setState(159);
				acciones();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(161);
				escribir();
				setState(162);
				acciones();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(164);
				llamar_fun();
				setState(165);
				acciones();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(167);
				fun_regresar();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fun_regresarContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(AangParser.RETURN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode PYCOMA() { return getToken(AangParser.PYCOMA, 0); }
		public Fun_regresarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_regresar; }
	}

	public final Fun_regresarContext fun_regresar() throws RecognitionException {
		Fun_regresarContext _localctx = new Fun_regresarContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_fun_regresar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(RETURN);
			setState(172);
			exp();
			setState(173);
			match(PYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AangParser.ID, 0); }
		public TerminalNode ASIGNAR() { return getToken(AangParser.ASIGNAR, 0); }
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode PYCOMA() { return getToken(AangParser.PYCOMA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(ID);
			setState(176);
			match(ASIGNAR);
			setState(177);
			a();
			setState(178);
			match(PYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Llamar_funContext llamar_fun() {
			return getRuleContext(Llamar_funContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_a);
		try {
			setState(182);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				expresion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				llamar_fun();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_expresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			exp();
			setState(185);
			e();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EContext extends ParserRuleContext {
		public TerminalNode MAYOR() { return getToken(AangParser.MAYOR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode MENOR() { return getToken(AangParser.MENOR, 0); }
		public TerminalNode IGUAL() { return getToken(AangParser.IGUAL, 0); }
		public TerminalNode DIFERENTE() { return getToken(AangParser.DIFERENTE, 0); }
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
	}
